--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,4 +1,5 @@
 @import "globalVars";
+@import "components";
 
 * {
     margin: 0;
@@ -30,26 +31,6 @@ footer {
     padding: 30px 0;
 }
 
-.card button {
-    border-radius: 30px;
-    color: $blue-text;
-    background: $canvas-bg;
-    border: none;
-    padding: 5px;
-    width: 90px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.card-header {
-    margin-bottom: 20px;
-    font-size: 25px;
-}
-
-.card {
-    width: 200px;
-}
-
 .container {
     max-width: 1000px;
     margin: auto;
@@ -60,9 +41,7 @@ footer {
 }
 
 .flex-box {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    @include flexB($alignment: start, $j-content: space-between);
     flex-wrap: wrap;
 }
 
@@ -79,49 +58,4 @@ footer {
 .hidden {
     opacity: 0;
     pointer-events: none;
-}
-
-#timetable {
-    max-width: 1200px;
-    min-height: 500px;
-    background-color: $canvas-bg;
-    margin: auto;
-    border-radius: 30px;
-    padding: 30px;
-}
-
-#logo {
-    width: 200px;
-}
-
-#media-links {
-    max-width: 90px;
-    margin-top: 20px;
-}
-
-#pop-form-back {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(103, 101, 151, 0.3);
-    z-index: 1;
-    backdrop-filter: blur(3px);
-    pointer-events: none;
-}
-
-#pop-form {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    max-width: 500px;
-    background-color: #3E3C55;
-}
-
-#export-btn {
-    width: 100%;
-    margin-top: 20px;
-    border: 2px $blue-text solid;
-    background: none;
 }
