--- a/src/assets/styles/globalVars.scss
+++ b/src/assets/styles/globalVars.scss
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
 
 $main-font: 'Rubik', sans-serif;
 $main-bg: #3E3C55;
 $canvas-bg: #2F2E41;
 $light-text: #FFF;
 $blue-text: #9D98EA;
+$add-bg: #46ddba;
 
 @mixin flexB($alignment: center, $j-content: space-between) {
     display: flex;
     align-items: $alignment;
     justify-content: $j-content;
-    flex-wrap: wrap;
 }
