--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -6,6 +6,7 @@
 .day-name {
     text-align: center;
     margin-bottom: 10px;
+    text-transform: capitalize;
 }
 
 .add {
@@ -44,6 +45,7 @@
     width: 200px;
 
     button {
+        display: block;
         border-radius: 30px;
         color: $blue-text;
         background: $canvas-bg;
@@ -112,4 +114,5 @@
     margin-top: 20px;
     border: 2px $blue-text solid;
     background: none;
+    text-align: center;
 }
