--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -52,7 +52,6 @@
         border: none;
         padding: 5px;
         width: 90px;
-        cursor: pointer;
         font-size: 16px;
     }
 }
@@ -89,24 +88,47 @@
     margin-top: 20px;
 }
 
-#pop-form-back {
+.popup {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(103, 101, 151, 0.3);
-    z-index: 1;
-    backdrop-filter: blur(3px);
-    pointer-events: none;
+    background-color: #67659758;
+    backdrop-filter: blur(8px);
 }
 
 #pop-form {
     position: fixed;
+    background-color: #2F2E41;
     top: 50%;
     left: 50%;
-    max-width: 500px;
-    background-color: #3E3C55;
+    width: 350px;
+    border-radius: 10px;
+    padding: 30px;
+    transform: translate(-50%, -50%);
+    text-align: center;
+
+    input, select {
+        border: none;
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 16px;
+        width: 100%;
+        margin-top: 15px;
+        background-color: #3E3C55;
+    }
+
+    button {
+        font-weight: bold;
+        background-color: $blue-text;
+        border-radius: 20px;
+        padding: 10px;
+        width: 70%;
+        font-size: 20px;
+        margin-top: 20px;
+
+    }
 }
 
 #export-btn {
@@ -115,4 +137,8 @@
     border: 2px $blue-text solid;
     background: none;
     text-align: center;
+}
+
+#statuses {
+    margin-top: 30px;
 }
