add lesson & popup

--- a/src/assets/styles/globalVars.scss
+++ b/src/assets/styles/globalVars.scss
@@ -12,3 +12,10 @@ $add-bg: #46ddba;
     align-items: $alignment;
     justify-content: $j-content;
 }
+
+@mixin fixCenter($position: absolute) {
+    position: $position;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
