--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -5,22 +5,21 @@
 
 .day-name {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     text-transform: capitalize;
+    font-size: 25px;
 }
 
 .add {
+    margin-top: 10px;
     background-color: $add-bg;
     position: relative;
-    cursor: pointer;
     opacity: 0.4;
     transition: all .3s;
+    cursor: pointer;
 
     img {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include fixCenter;
     }
 
     &:hover {
@@ -32,8 +31,49 @@
     text-align: center;
     border-radius: 10px;
     width: 100%;
-    height: 120px;
+    min-height: 120px;
     margin-top: 10px;
+    padding-top: 20px;
+    position: relative;
+    
+    .cover {
+        @include fixCenter;
+        opacity: 0;
+        pointer-events: none;
+        width: 100%;
+        height: 100%;
+        background-color: #1F9362;
+        z-index: 10;
+        border-radius: 10px;
+        transition: all .3s ease-in-out;
+
+        img {
+            @include fixCenter;
+            cursor: pointer;
+        }
+    }
+
+    .content {
+        @include fixCenter;
+
+        h2 {
+            font-size: 20px;
+            margin-bottom: 8px;
+        }
+    
+        p {
+            margin-top: 5px;
+            font-size: 14px;
+            color: rgba(255, 255, 255, 0.7);
+        }
+    }
+
+    &:hover {
+        .cover {
+            opacity: 1;
+            pointer-events: all;
+        }
+    }
 }
 
 .card-header {
@@ -99,14 +139,11 @@
 }
 
 #pop-form {
-    position: fixed;
+    @include fixCenter($position: fixed);
     background-color: #2F2E41;
-    top: 50%;
-    left: 50%;
     width: 350px;
     border-radius: 10px;
     padding: 30px;
-    transform: translate(-50%, -50%);
     text-align: center;
 
     input, select {
@@ -127,7 +164,6 @@
         width: 70%;
         font-size: 20px;
         margin-top: 20px;
-
     }
 }
 
