--- a/src/assets/styles/components.scss
+++ b/src/assets/styles/components.scss
@@ -11,7 +11,6 @@
 }
 
 .add {
-    margin-top: 10px;
     background-color: $add-bg;
     position: relative;
     opacity: 0.4;
@@ -32,8 +31,7 @@
     border-radius: 10px;
     width: 100%;
     min-height: 120px;
-    margin-top: 10px;
-    padding-top: 20px;
+    margin-top: 15px;
     position: relative;
     
     .cover {
@@ -42,10 +40,9 @@
         pointer-events: none;
         width: 100%;
         height: 100%;
-        background-color: #1F9362;
         z-index: 10;
         border-radius: 10px;
-        transition: all .3s ease-in-out;
+        transition: all .2s ease-in-out;
 
         img {
             @include fixCenter;
@@ -55,10 +52,11 @@
 
     .content {
         @include fixCenter;
+        width: 100%;
 
         h2 {
             font-size: 20px;
-            margin-bottom: 8px;
+            margin-bottom: 12px;
         }
     
         p {
@@ -112,6 +110,7 @@
     margin: auto;
     border-radius: 15px;
     padding: 30px;
+    padding-bottom: 40px;
 
     ul {
         list-style: none;
@@ -142,7 +141,7 @@
     @include fixCenter($position: fixed);
     background-color: #2F2E41;
     width: 350px;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 30px;
     text-align: center;
 
@@ -176,5 +175,22 @@
 }
 
 #statuses {
-    margin-top: 30px;
+    margin-top: 50%;
+
+    li {
+        @include flexB($j-content: flex-start);
+        margin-top: 20px;
+
+        span {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            margin-right: 15px;
+        }
+        
+        p {
+            max-width: 200px;
+            font-size: 20px;
+        }
+    }
 }
